[gd_scene load_steps=3 format=1]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://test.gd" type="Script" id=2]

[node name="Node2D" type="Node2D"]

script/script = ExtResource( 1 )

[node name="PDPlayer" type="PDPlayer" parent="."]

script/script = ExtResource( 2 )

[node name="bang" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 27.0
margin/top = 30.0
margin/right = 73.0
margin/bottom = 53.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "bang!"
flat = false

[node name="slider_l" type="HSlider" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 26.0
margin/top = 63.0
margin/right = 121.0
margin/bottom = 79.0
range/min = 200.0
range/max = 1500.0
range/step = 1.0
range/page = 0.0
range/value = 700.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="slider_r" type="HSlider" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 26.0
margin/top = 82.0
margin/right = 120.0
margin/bottom = 98.0
range/min = 200.0
range/max = 1500.0
range/step = 1.0
range/page = 0.0
range/value = 350.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="CheckButton-R" type="CheckButton" parent="."]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 117.0
margin/top = 85.0
margin/right = 193.0
margin/bottom = 107.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0

[node name="CheckButton-L" type="CheckButton" parent="."]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 117.0
margin/top = 65.0
margin/right = 193.0
margin/bottom = 88.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0

[connection signal="pressed" from="bang" to="." method="_on_bang_pressed"]

[connection signal="value_changed" from="slider_l" to="." method="_on_slider_l_value_changed"]

[connection signal="value_changed" from="slider_r" to="." method="_on_slider_r_value_changed"]

[connection signal="toggled" from="CheckButton-R" to="." method="_on_CheckButtonR_toggled"]

[connection signal="toggled" from="CheckButton-L" to="." method="_on_CheckButtonL_toggled"]


